Alterações no tratamento de exceção

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,11 @@
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": ["**/*.spec.ts"] }
+    ],
+    "prettier/prettier": 
+    [ "error",
+      {
+        "endOfLine": "off"}
     ]
   },
   "settings": {
